--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "babel-preset-env": "^1.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-autocomplete": "^1.3.0",
     "react-google-maps": "^9.4.5",
+    "react-places-autocomplete": "^7.3.0",
     "webpack": "^5.33.2",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
